# 4MRNA-G4

./: README.md  all-zip.js  build.js  download.js  fitting.js  generate.js  helper.js  ideal.js  index.html  interface.js  main.js  manifest.json  math.js  mr-button.js  parameter.js  pdb.js  phaser.js  pyproject.toml  refine.js  sw.js  template.js  viewer.js
Dev/: index-dev.html  zip.js
Templates/: 4MRNA-G4-OneBlock.sh  4MRNA-G4-TwoBlock.sh  Info.txt  Phaser-MR.sh
Templates/DNA-Right/: DNA-R-P-All-CW
fourmrna_g4/: __init__.py  launcher.py
